--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,10 @@
 .contenedor{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: flex-end;
+    align-content: center;
     height: 700px;
     background-color: rgba(0, 0, 0, 0.5);
 }
